--- a/ansible/roles/nightliessite/templates/nightly.py.jinja
+++ b/ansible/roles/nightliessite/templates/nightly.py.jinja
@@ -1,5 +1,5 @@
 #!/usr/bin/python
-import urllib, time, json, requests, dateutil.parser, os
+import urllib, time, json, requests, dateutil.parser, os, shutil
 def ensurePathExists(path):
 	if not os.path.exists(path):
 		os.makedirs(path)
